bin/kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: metabase
  namespace: metabase
spec:
  # Currently Metabase is not horizontly scalable. See
  # https://github.com/metabase/metabase/issues/1446 and
  # https://github.com/metabase/metabase/issues/2754
  replicas: 1 # NOTE: Should remain 1
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
      - image: metabase/metabase:v0.23.0
        imagePullPolicy: Always
        name: metabase
        ports:
        - containerPort: 3000
