bin/kubernetes/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: metabase
spec:
  # Currently Metabase is not horizontly scalable. See
  # https://github.com/metabase/metabase/issues/1446 and
  # https://github.com/metabase/metabase/issues/2754
  replicas: 1 # NOTE: Should remain 1
  template:
    metadata:
      labels:
        app: metabase
        tier: frontend
    spec:
      containers:
      - name: metabase
        image: metabase/metabase:v0.22.2
        ports:
        - containerPort: 80
