bin/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: metabase
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    app: metabase
